...
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:id="@+id/textView94"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:text="Cost: 5sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
