...
        android:layout_alignParentStart="true" />

    <Button
        android:text="Confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/yes"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="Bonus Feats: A Fighter gains a bonus feat at Level 1, Level 2, and at every other level after Level 2 from the fighter bonus feats list."
...
